=================== Release 1.0 2017-03-01 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/01)
        * Added support for adding tasks. (2017/02/20)
        * New L&F. (2017/02/19)
        * Removed support to define the amount of categories and tasks, this must be done depending on the version of the App. And some aesthetic modifications too. (2017/02/19)
        * Added support for adding categories to a project. (2017/02/18)
        * Added support for showing start & close dates for each project listed. (2017/02/18)
        * Renamed the project to CoderToDo. (2017/02/18)
        * Corrected a bug when inserting the next working day. And removed support for adding tasks before the working day beguns. (2017/02/18)
        * Some very important corrections to the internal date keeping system. Corrected some mayor bugs with the dates and added support to add tasks BEFORE the working day beguns. (2017/02/18)
        * Added icons. (2017/02/17)
        * Improved support for *ViewProject* view. (2017/02/17)
        * Added base support for *ViewProject* view. (2017/02/16)
        * Several very important modifications, too many to list. (2017/02/16)
        * Improved support for listing projects, like sorting, show project info accurately, and managing dates and statuses. Added support for an Introductory view. (2017/02/15)
        * Renamed project to *SmartTODO*. (2017/02/14)
        * Added complete support for adding projects. Also added support for *Localization*. (2017/02/14)
        * Added base support for listing projects and adding projects. Some other minor modifications too. (2017/02/13)
        * Renamed the project to 9-5TODO. (2017/02/10)
        * Added support for username input screen. (2017/02/10)
        * Added a very basic support for handling the CoreData model that underlies the application. (2017/02/09)